fix: block not fitted correctly container

--- a/wp-content/plugins/ap-library/public/css/ap-library-public.css
+++ b/wp-content/plugins/ap-library/public/css/ap-library-public.css
@@ -58,17 +58,18 @@ html {
 /* Fade Gallery styles */
 .ap-fade-gallery {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
   overflow: hidden;
   /*background: #000;*/
 }
 .ap-fade-gallery img {
   position: absolute;
   top: 0; left: 0;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
   opacity: 0;
   transition: opacity 1s;
   z-index: 1;
